src/sections/AboutMe/AboutMe.module.scss
@import '@/styles/variables.scss';
@import '@/styles/mixins.scss';

.section {
  padding-bottom: 60px;
}

.aboutMeYT {
  padding: 80px 0 0;
  position: relative;

  @media (min-width: $break-sm) {
    padding: 60px 0 16px;
  }

  @media (min-width: $break-md) {
    padding: 80px 0 16px;
  }
}

.star {
  position: absolute;
  top: 10%;
  left: 40%;
  transform: rotate(25deg) scale(1.7);
  opacity: 0.7;
  z-index: 1;
}

.aboutMe {
  display: flex;
  flex-direction: column;
  padding: 80px 0 0;

  @media (min-width: $break-sm) {
    padding: 60px 0 16px;
  }

  @media (min-width: $break-md) {
    flex-direction: row;

    &:nth-child(even) {
      flex-direction: row-reverse;
    }

    &:last-of-type {
      flex-direction: row;
    }
  }
}

.contentWrapper {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;

  @media (min-width: $break-md) {
    width: 50%;
    padding-top: 80px;
  }
}

.title {
  text-transform: uppercase;
  font-size: 28px;
  line-height: 1;
  font-weight: 700;
  letter-spacing: 2px;
  margin-bottom: 20px;
  z-index: 3;

  @media (min-width: $break-md) {
    font-size: 34px;
  }

  @media (min-width: $break-lg) {
    margin-bottom: 30px;
  }

  & span {
    display: block;
    width: fit-content;
    background-color: $color-white;
    padding: 6px 10px;
    transform: skew(-15deg);
    box-shadow: -8px -8px 0px -3px $color-bunting;
  }
}

.description {
  font-size: 18px;
  color: $color-bunting;
  line-height: 1.7;
  max-width: 1100px;
  z-index: 3;

  @media (min-width: $break-sm) {
    padding: 0 30px;
  }

  a {
    text-decoration: underline;
  }
}

.imageWrapper {
  margin-top: 20px;
  width: 100%;
  display: flex;
  align-items: center;

  @media (min-width: $break-md) {
    width: 50%;
    margin-top: 0;
  }
}

.imageMobile {
  width: 100%;
  height: auto;

  @media (min-width: $break-sm) {
    display: none;
  }

}

.imageDesktop {
  display: none;

  @media (min-width: $break-sm) {
    display: block;
    width: 100%;
    height: auto;
  }
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.youtubeWrapper {
  display: flex;
  flex-direction: column;
  margin-top: 30px;

  @media (min-width: $break-md) {
    flex-direction: row;
    margin-top: 50px;
  }

  & div {
    margin-bottom: 20px;
    z-index: 3;

    @media (min-width: $break-md) {
      text-align: center;
      width: 50%;
    }

    & iframe {
      width: 100%;
      height: 200px;

      @media (min-width: $break-sm) {
        height: 300px;
      }

      @media (min-width: $break-md) {
        width: 98%;
        height: 260px;
      }

      @media (min-width: $break-xl) {
        width: 560px;
        height: 315px;
      }
    }
  }
}

